# StinkyBastard

./: .gitignore  .gitmodules  CMakeLists.txt  StinkyBastard.pro
modules/: CMakeLists.txt
src/: Application.h  CMakeLists.txt  Helper.cpp  Helper.h  Launcher.cpp  Launcher.h  LearningSetsMaker.cpp  LearningSetsMaker.h  NetworkCreator.cpp  NetworkCreator.h  NetworkTeacher.cpp  NetworkTeacher.h  QLearningTeacher.cpp  QLearningTeacher.h  ReplayMemoryMerger.cpp  ReplayMemoryMerger.h  WebAppLauncher.cpp  WebAppLauncher.h  bastardapplication.cpp  bastardapplication.h  boardsignalconverter.h  gameboardwidget.cpp  gameboardwidget.h  gamecontroller.cpp  gamecontroller.h  gamewidget.cpp  gamewidget.h  keyboardgamecontroller.cpp  keyboardgamecontroller.h  launcher.cpp  learningsetsmaker.h  main.cpp  networkcreator.cpp  networkcreator.h  networkoutputconverter.cpp  networkoutputconverter.h  networkteacher.cpp  networkteacher.h  neuralnetworkgamecontroller.cpp  neuralnetworkgamecontroller.h  (+3 more)
src/TrainingApp/: README.md  Stinky.pro  application.h  helper.cpp  helper.h  launcher.h  learningsetsmaker.cpp  learningsetsmaker.h  networkcreator.h
src/WebApp/: Bastard.pro  LICENSE  README.md  bastardapplication.cpp  bastardapplication.h  boardsignalconverter.cpp  gameboardwidget.h  gamecontroller.h  gameheaderwidget.cpp  gameheaderwidget.h  main.cpp  tilepositioncomparer.cpp
src/arguments/: ArgumentParser.cpp  ArgumentParser.h  Arguments.cpp  Arguments.h  LearningSetsMakerArguments.cpp  LearningSetsMakerArguments.h  LearningSetsMakerArgumentsParser.cpp  LearningSetsMakerArgumentsParser.h  NetworkCreatorArguments.cpp  NetworkCreatorArguments.h  NetworkCreatorArgumentsParser.cpp  NetworkCreatorArgumentsParser.h  NetworkTeacherArguments.cpp  NetworkTeacherArguments.h  NetworkTeacherArgumentsParser.cpp  NetworkTeacherArgumentsParser.h  QLearningArguments.cpp  QLearningArguments.h  QLearningArgumentsParser.cpp  QLearningArgumentsParser.h  ReplayMemoryMergerArguments.cpp  ReplayMemoryMergerArguments.h  ReplayMemoryMergerArgumentsParser.cpp  ReplayMemoryMergerArgumentsParser.h  WebAppArguments.cpp  WebAppArguments.h  WebAppArgumentsParser.cpp  WebAppArgumentsParser.h
src/utils/: BoardSignalConverter.cpp  BoardSignalConverter.h  Defaults.h  NetworkOutputConverter.cpp  NetworkOutputConverter.h  QLearningState.cpp  QLearningState.h  Reinforcement.cpp  Reinforcement.h  ReplayMemory.cpp  ReplayMemory.h  ReplayMemoryTracker.cpp  ReplayMemoryTracker.h  TilePositionComparer.cpp  TilePositionComparer.h
src/web/: GameBoardWidget.cpp  GameBoardWidget.h  GameController.cpp  GameController.h  GameHeaderWidget.cpp  GameHeaderWidget.h  GameWidget.cpp  GameWidget.h  KeyboardGameController.cpp  KeyboardGameController.h  NeuralNetworkGameController.cpp  NeuralNetworkGameController.h  ScoreWidget.cpp  ScoreWidget.h  WebApplication.cpp  WebApplication.h
